@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+- Disable SQLite synchronous writes, and note that the backing store is not intended to be persistent or durable.
 
 0.011     2020-02-27 16:17:58+11:00 Australia/Melbourne
 - Make it work under Perl < 5.24 again (no postderef)
